--- a/05_OSEMN/05ex_OSEMN.ipynb
+++ b/05_OSEMN/05ex_OSEMN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = [np.random.randint(1,50000) for i in range(np.random.randint(1,200))]\n",
+    "file_name = \"simple_data.txt\"\n",
+    "\n",
+    "with open(file_name, mode='w') as file:\n",
+    "    for item in s:\n",
+    "        file.write(str(item) + \"\\n\") "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2\\. Create a random matrix of 5x5 and then save it to a text file named \"data.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = np.random.rand(5,5) \n",
+    "file_name = \"data.txt\"\n",
+    "\n",
+    "np.savetxt(file_name, s, delimiter=' ')"
    ]
   },
   {
@@ -40,14 +66,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "input_file = \"data.txt\"\n",
+    "output_file = \"data.csv\"\n",
+    "\n",
+    "with open(input_file, mode='r') as data_file, open(output_file, mode='w', newline='') as csv_file :\n",
+    "    csv_writer = csv.writer(csv_file)\n",
+    "    for line in data_file:\n",
+    "        row = [float(value) for value in line.strip().split()]\n",
+    "        csv_writer.writerow(row)      "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4\\. load the binary file named *credit_card.dat* and convert the data into the real credit-card number.\n",
+    "4\\. Load the binary file named *credit_card.dat* and convert the data into the real credit-card number.\n",
     "Each line correspond to a credit card number.\n",
     "Each character is composed by 6 bit (even the space) and the last 4 bit are just a padding\n",
     "\n",
     "**hint**: use the `chr()` function to convert a number to a char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import struct, time\n",
+    "\n",
+    "input_file = \"credit_card.dat\"\n",
+    "output_file = \"credit_cart.txt\"\n",
+    "\n",
+    "with  open(input_file,'r') as file, open (output_file, mode=\"w\", newline='') as output:\n",
+    "    \n",
+    "    word_size = 6 # size of the word in bit\n",
+    "    number_char = 19\n",
+    "    \n",
+    "    for line in file :\n",
+    "        bit_sequence = line.strip()\n",
+    "        credit_card = []\n",
+    "        for n in range (0, len(bit_sequence), word_size):\n",
+    "            if len(credit_card) >= number_char :\n",
+    "                break\n",
+    "            \n",
+    "            bits = bit_sequence[n:n+word_size]\n",
+    "            character = chr(int(bits,2))\n",
+    "            credit_card.append(character)\n",
+    "        \n",
+    "        output.write(''.join(credit_card) + '\\n')        "
    ]
   },
   {
