--- a/05_OSEMN/05_OSEMN.ipynb
+++ b/05_OSEMN/05_OSEMN.ipynb
@@ -842,7 +842,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "data.plot.scatter(\"fLength\",\"fWidth\",)\n"
+    "data.plot.scatter(\"fLength\",\"fWidth\",)"
    ]
   },
   {
