--- a/06_Pandas/06_Pandas.ipynb
+++ b/06_Pandas/06_Pandas.ipynb
@@ -287,7 +287,7 @@
     "\n",
     "Timestamped data is the most basic type of time series data that associates values with points in time. For pandas objects it means using the points in time.\n",
     "\n",
-    "functions like `pd.to_datetime` can be used, for instance, when reading information as string from a dataset.\n",
+    "Functions like `pd.to_datetime` can be used, for instance, when reading information as string from a dataset.\n",
     "\n",
     "Timestamp is the pandas equivalent of python’s Datetime and is interchangeable with it in most cases. "
    ]
